# ILDC

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  RESEARCH.md  ReadMe.md  pyproject.toml  requirements.txt
dataset/: data_loader.py  data_loader_xla.py
ildc/data/: data_loader.py
ildc/models/: ar_model.py  config.py  dc_model.py  helper_fn.py  ildc_model.py
ildc/trainer/: train_step_bptt.py  train_step_single.py
inference/: test-C.py  test_xla.py
model/: AR_Model.py  DC_Model.py  ILDC_Model.py  config.py  helper_fn.py
scripts/: train_cuda.py  train_cuda_bptt.py  train_cuda_single.py  train_xla_bptt.py  train_xla_single.py
test/: test-C.py  test_xla.py
tests/: test_c.py  test_xla.py
train/: Train_Step.py  Train_Step_Single.py  __init__.py  train_cuda.py  train_xla.py  train_xla_BPTT.py  train_xla_Single.py  training.md
